force-app/main/default/objects/Order/fields/Account_Type__c.field-meta.xml
<CustomField>
    <fullName>Account_Type__c</fullName>
    <description>SFDC-451: mirrors the Opportunity Account Type so change orders and renewals no longer show a blank Account Type on the Order.</description>
    <formula>TEXT(Opportunity.Account_Type__c)</formula>
    <inlineHelpText>Read-only. Mirrors Opportunity Account Type. Blank when the Order has no Opportunity.</inlineHelpText>
    <label>Account Type</label>
    <type>Text</type>
</CustomField>