force-app/main/default/objects/Order/fields/Amendment_Reason__c.field-meta.xml
<CustomField>
    <fullName>Amendment_Reason__c</fullName>
    <inlineHelpText>The specific reason this service is being amended. Required for Change and Upsell order types. Passed to Odoo with the order to document the change in the billing system.</inlineHelpText>
    <label>Amendment Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BAN_Change</fullName>
                <label>BAN Change</label>
            </value>
            <value>
                <fullName>Price_Change</fullName>
                <label>Price Change</label>
            </value>
            <value>
                <fullName>Quantity_Change</fullName>
                <label>Quantity Change</label>
            </value>
            <value>
                <fullName>Product_Change</fullName>
                <label>Product Change</label>
            </value>
            <value>
                <fullName>Site_Transfer</fullName>
                <label>Site Transfer</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>