force-app/main/default/objects/Order/fields/Approval_Rejection_Reason__c.field-meta.xml
<CustomField>
    <fullName>Approval_Rejection_Reason__c</fullName>
    <inlineHelpText>The reason provided by the Country Manager when rejecting an order. Populated automatically from the rejection comment on the approval step. Review before resubmitting.</inlineHelpText>
    <label>Approval Rejection Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>