force-app/main/default/objects/Order/fields/Approved_By__c.field-meta.xml
<CustomField>
    <fullName>Approved_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The Country Manager who approved this order. Populated automatically by the approval process on final approval. Read-only - do not edit manually.</inlineHelpText>
    <label>Approved By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Approved_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>