force-app/main/default/objects/Order/fields/Approved_Date__c.field-meta.xml
<CustomField>
    <fullName>Approved_Date__c</fullName>
    <inlineHelpText>The date the Country Manager approved this order. Populated automatically by the approval process on final approval. Read-only.</inlineHelpText>
    <label>Approved Date</label>
    <type>Date</type>
</CustomField>