force-app/main/default/objects/Order/fields/BAN__c.field-meta.xml
<CustomField>
    <fullName>BAN__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>BAN (obsoleted)</label>
    <referenceTo>BillingAccount__c</referenceTo>
    <relationshipLabel>Orders</relationshipLabel>
    <relationshipName>Orders_BAN</relationshipName>
    <type>Lookup</type>
</CustomField>