force-app/main/default/objects/Order/fields/BAN_ID__c.field-meta.xml
<CustomField>
    <fullName>BAN_ID__c</fullName>
    <inlineHelpText>Populated automatically by the Odoo integration. Do not edit manually.</inlineHelpText>
    <label>Odoo BAN Partner ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>