force-app/main/default/objects/Order/fields/BillingAccount__c.field-meta.xml
<CustomField>
    <fullName>BillingAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The BAN that invoices will be raised against for this order. Carried over from the accepted Quote automatically. Verify before activating the order.</inlineHelpText>
    <label>BAN</label>
    <referenceTo>BillingAccount__c</referenceTo>
    <relationshipLabel>Orders</relationshipLabel>
    <relationshipName>Orders</relationshipName>
    <type>Lookup</type>
</CustomField>