force-app/main/default/objects/Order/fields/CA_Auto_Accepted__c.field-meta.xml
<CustomField>
    <fullName>CA_Auto_Accepted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CA Auto Accepted</label>
    <type>Checkbox</type>
</CustomField>