force-app/main/default/objects/Order/fields/CA_Deadline__c.field-meta.xml
<CustomField>
    <fullName>CA_Deadline__c</fullName>
    <label>CA Deadline</label>
    <type>DateTime</type>
</CustomField>