force-app/main/default/objects/Order/fields/CA_Email_Sent__c.field-meta.xml
<CustomField>
    <fullName>CA_Email_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CA Email Sent</label>
    <type>Checkbox</type>
</CustomField>