force-app/main/default/objects/Order/fields/Cancellation_Notes__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Notes__c</fullName>
    <inlineHelpText>Free-text notes explaining the cancellation in detail. Required when Cancellation Reason is Other. Include customer-provided context where available.</inlineHelpText>
    <label>Cancellation Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>