force-app/main/default/objects/Order/fields/Cancellation_Reason__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Reason__c</fullName>
    <inlineHelpText>Required when cancelling an order. Select the primary reason for cancellation. Reported for revenue tracking and process improvement.</inlineHelpText>
    <label>Cancellation Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Customer_Request</fullName>
                <label>Customer Request</label>
            </value>
            <value>
                <fullName>Duplicate_Order</fullName>
                <label>Duplicate Order</label>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
            <value>
                <fullName>Non_Payment</fullName>
                <label>Non-Payment</label>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>