force-app/main/default/objects/Order/fields/Cancelled_By__c.field-meta.xml
<CustomField>
    <fullName>Cancelled_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The user who cancelled this order. Populated automatically by the Cancel Order quick action. Read-only - do not edit manually.</inlineHelpText>
    <label>Cancelled By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cancelled_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>