force-app/main/default/objects/Order/fields/Cancelled_Date__c.field-meta.xml
<CustomField>
    <fullName>Cancelled_Date__c</fullName>
    <inlineHelpText>The date this order was cancelled. Populated automatically by the Cancel Order quick action. Read-only.</inlineHelpText>
    <label>Cancelled Date</label>
    <type>Date</type>
</CustomField>