force-app/main/default/objects/Order/fields/Change_Asset__c.field-meta.xml
<CustomField>
    <fullName>Change_Asset__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>For Change and Churn orders, link to the Asset being modified or terminated. Populated automatically from the SOF Handler flow. Used to update the asset&apos;s lifecycle status.</inlineHelpText>
    <label>Change Reference Asset</label>
    <referenceTo>Asset</referenceTo>
    <relationshipName>Change_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>