force-app/main/default/objects/Order/fields/Churn_Approved__c.field-meta.xml
<CustomField>
    <fullName>Churn_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Checked when a Sales Director or Country Head has approved this termination. Required before a Churn order can be activated. Do not check manually - use the Approve Churn quick action.</inlineHelpText>
    <label>Churn Approved</label>
    <type>Checkbox</type>
</CustomField>