force-app/main/default/objects/Order/fields/Churn_Approved_By__c.field-meta.xml
<CustomField>
    <fullName>Churn_Approved_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The manager who approved this termination. Populated automatically when the Approve Churn quick action is used. Read-only - do not edit manually.</inlineHelpText>
    <label>Churn Approved By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Churn_Approved_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>