force-app/main/default/objects/Order/fields/Churn_Approved_Date__c.field-meta.xml
<CustomField>
    <fullName>Churn_Approved_Date__c</fullName>
    <inlineHelpText>The date churn approval was granted. Populated automatically when the Approve Churn quick action is used. Read-only.</inlineHelpText>
    <label>Churn Approved Date</label>
    <type>Date</type>
</CustomField>