force-app/main/default/objects/Order/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The primary contact on this Order, carried forward from the Quote. Flows to Contract and Assets on creation.</inlineHelpText>
    <label>Primary Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Orders</relationshipLabel>
    <relationshipName>Contact_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>