force-app/main/default/objects/Order/fields/Contract_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_End_Date__c</fullName>
    <description>FB-946: Contract end date carried from the Quote (Quote.Contract_End_Date__c) at order creation. Editable on the Order - not recalculated here.</description>
    <inlineHelpText>End date of the contract term. Inherited from the Quote when the order is created. Can be edited manually.</inlineHelpText>
    <label>Contract End Date</label>
    <type>Date</type>
</CustomField>