force-app/main/default/objects/Order/fields/Contract_Term_Months__c.field-meta.xml
<CustomField>
    <fullName>Contract_Term_Months__c</fullName>
    <inlineHelpText>Duration of the contracted service commitment in months. Carried from the Quote. Used to calculate TCV and set the contract end date.</inlineHelpText>
    <label>Contract Term (Months)</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>