force-app/main/default/objects/Order/fields/Country_Manager__c.field-meta.xml
<CustomField>
    <fullName>Country_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The Country Manager who must approve this order before confirmation. Set by the submitting sales rep when submitting for approval. Routes the approval request to this user.</inlineHelpText>
    <label>Country Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Country_Manager_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>