force-app/main/default/objects/Order/fields/Credit_Block__c.field-meta.xml
<CustomField>
    <fullName>Credit_Block__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Credit Block</label>
    <type>Checkbox</type>
</CustomField>