force-app/main/default/objects/Order/fields/Customer_Notice_Date__c.field-meta.xml
<CustomField>
    <fullName>Customer_Notice_Date__c</fullName>
    <description>Date the customer formally gave notice of termination. Used to calculate whether the 90-day GTC notice period is met.</description>
    <inlineHelpText>Date customer formally notified intent to churn. Must be at least 90 days before Termination Date per GTC notice period. Early termination requires escalated approval.</inlineHelpText>
    <label>Customer Notice Date</label>
    <type>Date</type>
</CustomField>