force-app/main/default/objects/Order/fields/Customer_PO_Reference__c.field-meta.xml
<CustomField>
    <fullName>Customer_PO_Reference__c</fullName>
    <inlineHelpText>Customer&apos;s Purchase Order number for this order. Passed to Odoo as the invoice reference. Carried from the Quote automatically.</inlineHelpText>
    <label>Customer PO Reference</label>
    <length>100</length>
    <type>Text</type>
</CustomField>