force-app/main/default/objects/Order/fields/Early_Termination__c.field-meta.xml
<CustomField>
    <fullName>Early_Termination__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Formula: TRUE when Customer Notice Date to Termination Date is less than 90 days. Triggers escalated churn approval requirement.</description>
    <inlineHelpText>Checked when the notice period is less than 90 days. Requires escalated approval from Country Head or Sales Director.</inlineHelpText>
    <label>Early Termination</label>
    <type>Checkbox</type>
</CustomField>