force-app/main/default/objects/Order/fields/End_Customer__c.field-meta.xml
<CustomField>
    <fullName>End_Customer__c</fullName>
    <formula>Opportunity.Channel_Partner__r.Name</formula>
    <label>End Customer</label>
    <type>Text</type>
</CustomField>