force-app/main/default/objects/Order/fields/ETF_Amount__c.field-meta.xml
<CustomField>
    <fullName>ETF_Amount__c</fullName>
    <inlineHelpText>Early Termination Fee amount payable by the customer for terminating before contract end. Calculated per the contract terms. Required on Churn orders where ETF applies.</inlineHelpText>
    <label>ETF Amount (USD)</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>