force-app/main/default/objects/Order/fields/ETF_Finance_Approved__c.field-meta.xml
<CustomField>
    <fullName>ETF_Finance_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Checked by Country Finance to confirm the Early Termination Fee waiver has been approved. Required before a Churn order with ETF Waived can be activated.</inlineHelpText>
    <label>ETF Waiver Finance Approved</label>
    <type>Checkbox</type>
</CustomField>