force-app/main/default/objects/Order/fields/ETF_Reference__c.field-meta.xml
<CustomField>
    <fullName>ETF_Reference__c</fullName>
    <inlineHelpText>Reference number for the ETF transaction or Finance approval. Enter when ETF applies - used for billing and audit tracking of the termination charge.</inlineHelpText>
    <label>ETF Reference</label>
    <length>50</length>
    <type>Text</type>
</CustomField>