force-app/main/default/objects/Order/fields/ETF_Waived__c.field-meta.xml
<CustomField>
    <fullName>ETF_Waived__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check when the Early Termination Fee is being waived for this customer. Requires ETF Waiver Reason and Finance approval before the Churn order can be activated.</inlineHelpText>
    <label>ETF Waived</label>
    <type>Checkbox</type>
</CustomField>