force-app/main/default/objects/Order/fields/ETF_Waiver_Reason__c.field-meta.xml
<CustomField>
    <fullName>ETF_Waiver_Reason__c</fullName>
    <inlineHelpText>Required when ETF Waived is checked. Select the business justification for not charging the Early Termination Fee. Reviewed and approved by Finance.</inlineHelpText>
    <label>ETF Waiver Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Commercial Decision</fullName>
            </value>
            <value>
                <fullName>Force Majeure</fullName>
            </value>
            <value>
                <fullName>Relationship Management</fullName>
            </value>
            <value>
                <fullName>Legal Settlement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>