force-app/main/default/objects/Order/fields/Free_Months__c.field-meta.xml
<CustomField>
    <fullName>Free_Months__c</fullName>
    <inlineHelpText>Number of months where MRC billing is waived at the start of service. Carried from the Quote. Passed to Odoo to configure the billing deferral period.</inlineHelpText>
    <label>Free Months</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>