force-app/main/default/objects/Order/fields/Free_Period_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Free_Period_End_Date__c</fullName>
    <inlineHelpText>Last day of the billing waiver period. When set alongside Free Period Start Date, Odoo uses exact dates for the waiver rather than an integer month count.</inlineHelpText>
    <label>Free Period End Date</label>
    <type>Date</type>
</CustomField>