force-app/main/default/objects/Order/fields/Free_Period_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Free_Period_Start_Date__c</fullName>
    <inlineHelpText>First day of the billing waiver period for partial-month arrangements. Set alongside Free Period End Date to give Odoo exact waiver dates.</inlineHelpText>
    <label>Free Period Start Date</label>
    <type>Date</type>
</CustomField>