force-app/main/default/objects/Order/fields/FX_Billing_Flag__c.field-meta.xml
<CustomField>
    <fullName>FX_Billing_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Checked when this order is priced in USD but the billing account invoices in local currency. Carried from the Quote. Passed to Odoo to configure FX conversion on invoices.</inlineHelpText>
    <label>FX Billing Required</label>
    <type>Checkbox</type>
</CustomField>