force-app/main/default/objects/Order/fields/FX_Rate_Model__c.field-meta.xml
<CustomField>
    <fullName>FX_Rate_Model__c</fullName>
    <inlineHelpText>Required when FX Billing is flagged. Standard Reference Rate uses the Odoo country default. Contract Specific Reference uses an agreed rate documented in FX Rate Terms.</inlineHelpText>
    <label>FX Rate Model</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Standard_Reference_Rate</fullName>
                <default>true</default>
                <label>Standard Reference Rate</label>
            </value>
            <value>
                <fullName>Contract_Specific_Reference</fullName>
                <label>Contract Specific Reference</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>