force-app/main/default/objects/Order/fields/FX_Rate_Terms__c.field-meta.xml
<CustomField>
    <fullName>FX_Rate_Terms__c</fullName>
    <inlineHelpText>Required when FX Rate Model is Contract Specific Reference. Documents the agreed exchange rate source and terms. Passed to Odoo for Finance reference during bill runs.</inlineHelpText>
    <label>FX Rate Terms</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>