force-app/main/default/objects/Order/fields/Integration_Error__c.field-meta.xml
<CustomField>
    <fullName>Integration_Error__c</fullName>
    <inlineHelpText>Error message returned by Odoo when the order sync failed. Review this field to diagnose integration failures. Populated automatically - do not edit manually.</inlineHelpText>
    <label>Odoo Sync Error</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>