force-app/main/default/objects/Order/fields/Integration_Status__c.field-meta.xml
<CustomField>
    <fullName>Integration_Status__c</fullName>
    <inlineHelpText>Tracks whether this order has been sent to and acknowledged by Odoo. Failed - Manual Review Required means the Odoo team needs to investigate. Populated automatically by the integration.</inlineHelpText>
    <label>Odoo Sync Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Sent</fullName>
            </value>
            <value>
                <fullName>Acknowledged</fullName>
            </value>
            <value>
                <fullName>Failed_Manual_Review_Required</fullName>
                <label>Failed - Manual Review Required</label>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
            <value>
                <fullName>Synced</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>