force-app/main/default/objects/Order/fields/Is_Change_Order__c.field-meta.xml
<CustomField>
    <fullName>Is_Change_Order__c</fullName>
    <description>TRUE when this Order was created as a Change Order (Original_Order__c is populated). Used for record page button visibility rules.</description>
    <formula>NOT(ISBLANK(Original_Order__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Change Order</label>
    <type>Checkbox</type>
</CustomField>