force-app/main/default/objects/Order/fields/Is_Ramp_Deal__c.field-meta.xml
<CustomField>
    <fullName>Is_Ramp_Deal__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Checked when this order covers a multi-phase capacity ramp. Carried from the Quote. Used to identify ramp orders in reporting and provisioning workflows.</inlineHelpText>
    <label>Ramp Deal</label>
    <type>Checkbox</type>
</CustomField>