force-app/main/default/objects/Order/fields/Odoo_Order_ID__c.field-meta.xml
<CustomField>
    <fullName>Odoo_Order_ID__c</fullName>
    <inlineHelpText>Populated automatically by the Odoo integration. Do not edit manually.</inlineHelpText>
    <label>Odoo Order Reference</label>
    <length>50</length>
    <type>Text</type>
</CustomField>