force-app/main/default/objects/Order/fields/Odoo_Subscription_ID__c.field-meta.xml
<CustomField>
    <fullName>Odoo_Subscription_ID__c</fullName>
    <inlineHelpText>Odoo subscription record ID. Set by IP-2 (OdooOrderConfirmHandler). Used to link change orders (IP-4) to the original subscription.</inlineHelpText>
    <label>Odoo Subscription ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>