force-app/main/default/objects/Order/fields/Operation_Country__c.field-meta.xml
<CustomField>
    <fullName>Operation_Country__c</fullName>
    <inlineHelpText>Country code for the Digital Edge market where services are delivered. Carried from the Opportunity.</inlineHelpText>
    <label>Operation Country</label>
    <length>50</length>
    <type>Text</type>
</CustomField>