force-app/main/default/objects/Order/fields/Operation_Site__c.field-meta.xml
<CustomField>
    <fullName>Operation_Site__c</fullName>
    <inlineHelpText>The Digital Edge data centre where services under this order are delivered. Carried from the Quote. Used for provisioning routing and asset assignment.</inlineHelpText>
    <label>Site</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>TYO1</fullName>
            </value>
            <value>
                <fullName>TYO2</fullName>
            </value>
            <value>
                <fullName>TYO3</fullName>
            </value>
            <value>
                <fullName>TYO4</fullName>
            </value>
            <value>
                <fullName>TYO5</fullName>
            </value>
            <value>
                <fullName>TYO6</fullName>
            </value>
            <value>
                <fullName>TYO7</fullName>
            </value>
            <value>
                <fullName>OSA1</fullName>
            </value>
            <value>
                <fullName>OSA2</fullName>
            </value>
            <value>
                <fullName>SEL1</fullName>
            </value>
            <value>
                <fullName>SEL2</fullName>
            </value>
            <value>
                <fullName>SEL3</fullName>
            </value>
            <value>
                <fullName>PUS1</fullName>
            </value>
            <value>
                <fullName>JKT1</fullName>
            </value>
            <value>
                <fullName>JKT2</fullName>
            </value>
            <value>
                <fullName>CGK1</fullName>
            </value>
            <value>
                <fullName>MNL1</fullName>
            </value>
            <value>
                <fullName>PEK1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>