force-app/main/default/objects/Order/fields/Order_Confirmation_Date__c.field-meta.xml
<CustomField>
    <fullName>Order_Confirmation_Date__c</fullName>
    <description>Operational record of when the order was confirmed. Set by Order_Screen_ConfirmOrder flow on successful confirmation.</description>
    <inlineHelpText>Date the Order was confirmed (all gates passed and Status set to Activated). Set by the Confirm Order flow.</inlineHelpText>
    <label>Order Confirmation Date</label>
    <type>Date</type>
</CustomField>