force-app/main/default/objects/Order/fields/Order_No__c.field-meta.xml
<CustomField>
    <fullName>Order_No__c</fullName>
    <formula>HYPERLINK(&quot;/&quot; &amp; Id, BLANKVALUE(Order_Number__c, &quot;(no number)&quot;), &quot;_self&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Clickable Order Number (DE) — navigates to the order. For list views/search; not on page layouts.</inlineHelpText>
    <label>Order No</label>
    <type>Text</type>
</CustomField>