force-app/main/default/objects/Order/fields/Order_Number__c.field-meta.xml
<CustomField>
    <fullName>Order_Number__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>Digital Edge internal order reference number. Set automatically on order creation. Used as the primary reference for provisioning and billing coordination.</inlineHelpText>
    <label>Order Number (DE)</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>