force-app/main/default/objects/Order/fields/Order_Type__c.field-meta.xml
<CustomField>
    <fullName>Order_Type__c</fullName>
    <inlineHelpText>The type of commercial action this order executes. Drives the provisioning workflow and asset lifecycle update. Set automatically from the Quote Type on order creation.</inlineHelpText>
    <label>Order Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New Service</fullName>
                <default>true</default>
                <label>New Service</label>
            </value>
            <value>
                <fullName>Change/Upsell</fullName>
            </value>
            <value>
                <fullName>Churn</fullName>
            </value>
            <value>
                <fullName>Partial Churn</fullName>
            </value>
            <value>
                <fullName>Renewal</fullName>
            </value>
            <value>
                <fullName>Suspension</fullName>
            </value>
            <value>
                <fullName>Resumption</fullName>
            </value>
            <value>
                <fullName>BAN Change</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>