force-app/main/default/objects/Order/fields/Original_Order__c.field-meta.xml
<CustomField>
    <fullName>Original_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>For Change, Churn, and Renewal orders, links back to the original New Service order for this customer&apos;s service. Populated automatically from the Quote on order creation.</inlineHelpText>
    <label>Original Order</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Amendment Orders</relationshipLabel>
    <relationshipName>Amendment_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>