force-app/main/default/objects/Order/fields/Parent_Order__c.field-meta.xml
<CustomField>
    <fullName>Parent_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>For ramp deals, links child phase Orders back to the Phase 1 parent Order.</description>
    <label>Parent Order</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Ramp Phase Orders</relationshipLabel>
    <relationshipName>Ramp_Phase_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>