force-app/main/default/objects/Order/fields/Penalty_Decision__c.field-meta.xml
<CustomField>
    <fullName>Penalty_Decision__c</fullName>
    <description>Records the commercial decision on early termination penalty for churn orders that violate the GTC notice period.</description>
    <inlineHelpText>Decision on early termination fee. Waive = no ETF charged. Enforce = full ETF applied. Negotiate = custom ETF amount agreed with customer.</inlineHelpText>
    <label>Penalty Decision</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Enforce ETF</fullName>
            </value>
            <value>
                <fullName>Negotiate</fullName>
            </value>
            <value>
                <fullName>Waive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>