force-app/main/default/objects/Order/fields/Pending_Subscription_ID__c.field-meta.xml
<CustomField>
    <fullName>Pending_Subscription_ID__c</fullName>
    <inlineHelpText>Populated automatically by the Odoo integration. Do not edit manually.</inlineHelpText>
    <label>Pending Subscription ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>