force-app/main/default/objects/Order/fields/Quote__c.field-meta.xml
<CustomField>
    <fullName>Quote__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Quote that generated this Order via the SOF Handler flow (F-15). Set automatically on Order creation.</description>
    <inlineHelpText>The Quote that generated this Order when the signed SOF was uploaded. Populated automatically - do not edit manually. Links back to the accepted commercial terms.</inlineHelpText>
    <label>Quote</label>
    <referenceTo>Quote</referenceTo>
    <relationshipLabel>Orders</relationshipLabel>
    <relationshipName>Orders</relationshipName>
    <type>Lookup</type>
</CustomField>