force-app/main/default/objects/Order/fields/Ramp_Phase__c.field-meta.xml
<CustomField>
    <fullName>Ramp_Phase__c</fullName>
    <inlineHelpText>Which delivery phase this order represents (1 = parent/first phase, 2-6 = child phases). Set by RampOrderService when splitting a ramp deal into phase orders.</inlineHelpText>
    <label>Ramp Phase</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>