force-app/main/default/objects/Order/fields/Ramp_Phases__c.field-meta.xml
<CustomField>
    <fullName>Ramp_Phases__c</fullName>
    <inlineHelpText>Number of delivery phases for this ramp order. Carried from the Quote. Used by provisioning to schedule phased capacity delivery.</inlineHelpText>
    <label>Ramp Phases</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>