force-app/main/default/objects/Order/fields/RDD__c.field-meta.xml
<CustomField>
    <fullName>RDD__c</fullName>
    <inlineHelpText>Customer&apos;s target date for service go-live. Carried from the Quote. Passed to Operations as the provisioning target date.</inlineHelpText>
    <label>Requested Delivery Date</label>
    <type>Date</type>
</CustomField>