force-app/main/default/objects/Order/fields/Remaining_Term__c.field-meta.xml
<CustomField>
    <fullName>Remaining_Term__c</fullName>
    <description>Remaining contract term in whole months. New/renewal orders (no Original Order): equals Contract Term (Months). Change Orders: complete months between the CO RDD and the original order&apos;s Service End Date. Set on confirmation by Order_BeforeSave_SetRemainingTerm.</description>
    <inlineHelpText>Remaining contract term in whole months, set when the order is Confirmed.</inlineHelpText>
    <label>Remaining Term</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>