force-app/main/default/objects/Order/fields/SBI_Finance_Approved__c.field-meta.xml
<CustomField>
    <fullName>SBI_Finance_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Finance approval of SBI terms at the Order level. Inherited from Quote on Order creation. Required for ConfirmOrder gate G-07 (Module 9).</description>
    <inlineHelpText>Set to true when Finance has approved the Special Billing Instruction. Required for Order confirmation when SBI_Flag__c is true. Inherited from Quote.SBI_Finance_Approved__c.</inlineHelpText>
    <label>SBI Finance Approved</label>
    <type>Checkbox</type>
</CustomField>