force-app/main/default/objects/Order/fields/SBI_Finance_Comments__c.field-meta.xml
<CustomField>
    <fullName>SBI_Finance_Comments__c</fullName>
    <inlineHelpText>Finance team&apos;s conditions or clarifications on the approved Special Billing Instruction for this order. Carried from the Quote. Passed to Odoo with the order payload.</inlineHelpText>
    <label>SBI Finance Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>