force-app/main/default/objects/Order/fields/SBI_Flag__c.field-meta.xml
<CustomField>
    <fullName>SBI_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Checked when this order has non-standard billing requirements. Carried from the Quote. Triggers SBI Finance review on the order before provisioning proceeds.</inlineHelpText>
    <label>Special Billing Instruction</label>
    <type>Checkbox</type>
</CustomField>